# SBMLShowcase

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  regenerate.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: non-omv-local.yml  non-omv-remote.yml  non-omv.yml  omv-ci.yml
BioModels/: README.md  parse_biomodels.py  test.py  test_biomodels_compatibility_biosimulators.py  test_biomodels_results_table.py
BioModels/BIOMD0000000001/: BIOMD0000000001_url.omex  BIOMD0000000001_url.sedml  BIOMD0000000001_url.xml
BioModels/BIOMD0000000001/tests/: results_BIOMD0000000001_url.md  results_compatibility_biosimulators.md  results_local.json  results_remote.json
BioModels/BIOMD0000000138/: BIOMD0000000138_url.omex  BIOMD0000000138_url.sedml
BioModels/BIOMD0000000138/tests/: results_BIOMD0000000138_url.md  results_compatibility_biosimulators.md  results_local.json  results_remote.json
BioModels/BIOMD0000000724/: Theinmozhi_2018.omex  Theinmozhi_2018.xml
BioModels/BIOMD0000000724/tests/: results_Theinmozhi_2018.md  results_compatibility_biosimulators.md  results_local.json  results_remote.json
BioModels/BIOMD0000001077/: Adlung2021__model_jakstat_pa.omex
BioModels/BIOMD0000001077/tests/: results_Adlung2021_model_jakstat_pa.md  results_compatibility_biosimulators.md  results_local.json  results_remote.json
Brian/: BIOMD0000000184_LEMS_brian.py  BIOMD0000000184_LEMS_brian2.py  BIOMD0000000184_brian.py
Brian/results/: README.md
LEMS/: .test.127.mep  .test.jlems.omt  .test.jnml.omt  .test.jnmlbrian.omt  .test.jnmlbrian2.omt  .test.mep  .test.pylems.127.omt  .test.pylems.omt  .test.pylemsnml2.omt  BIOMD0000000127_url_LEMS.xml  BIOMD0000000184_LEMS.xml
NEURON/: BIOMD0000000184_LEMS_nrn.py  Lavrentovich2008_Ca_Oscillations.mod  Lavrentovich2008_Ca_Oscillations_0.mod
NeuroML2/: .test.fhn.jnml.omt  .test.fhn.jnmlbrian2.omt  .test.fhn.jnmlnrn.omt  .test.fhn.pylems.omt  .test.hr.jnml.omt  .test.jnml.omt  .test.jnmlnrn.omt  .test.validate.omt  .test2.jnml.omt  .test2.jnmlnrn.omt  FN.net.nml  HindmarshRose3d.xml  LEMS_FitzHughNagumo.xml  LEMS_Regular_HindmarshRose.xml  LEMS_Test.xml  LEMS_Test2.xml  Lavrentovich2008.xml  LavrentovichMulti.xml  Test.net.nml  TestMulti.net.nml  fhn.mep
SBML/: .test.validate.sbml.omt  BIOMD0000000127_url.xml  BIOMD0000000138_url.sedml  BIOMD0000000138_url.xml  Copasi184.cps  LEMS_NML2_Ex9_FN.omex  LEMS_NML2_Ex9_FN.sbml  LEMS_NML2_Ex9_FN.sedml  LEMS_NML2_Ex9_FN__github.sedml  LEMS_NML2_Ex9_FN_missing_xmlns.sedml  LEMS_Regular_HindmarshRose.sedml  Run_Regular_HindmarshRose.sedml  Run_Regular_HindmarshRose__github.sedml  create_minimal_omex_archive.py  log.yml  reports.h5  results.md  results_biosimulators_compatability.md  results_compatibility_biosimulators.md  results_compatibility_biosimulators_remote.md  test_LEMS_NML2_Ex9_FN.ipynb  test_LEMS_NML2_Ex9_FN.py  test_biosimulators_docker.py  test_compatibility_biosimulators.ipynb  test_compatibility_biosimulators.py  test_compatibility_biosimulators_remote.py  test_te_Ex9.py  test_tellurium.py  validateAll.sh
SBML/tests/: results_compatibility_biosimulators.md  results_compatibility_biosimulators_no_XFAIL.md  results_local.json  results_local.md  results_remote.json  results_remote.md  table.md  test_biosimulators_api.py  test_biosimulators_docker.py  test_biosimulators_local.py  test_biosimulators_remote.py  test_colour_coding_table.py  test_compatibility_biosimulators.ipynb  test_compatibility_biosimulators.py  test_creation_combined_results_table.py  test_tellurium.py  validateAll.sh
src/SBMLShowcase/: __init__.py
src/SBMLShowcase/BioModels/: parse_biomodels.py  test_biomodels_compatibility_biosimulators.py
src/SBMLShowcase/Brian/: .test.brian2.omt  BIOMD0000000184_LEMS_brian.py  (+1 more)
tellurium/: simple.py
test_suite/: README.md  process_test_suite.py  remote_links.p  results.md  results_remote.p  test_results_regeneration.sh  test_test_suite_compatibility_biosimulators.py  test_test_suite_results_table.py
test_suite/test_00001/: 00001-sbml-l3v2-sedml.omex  00001-sbml-l3v2-sedml.xml
test_suite/test_00002/: 00002-sbml-l3v2-sedml.omex  00002-sbml-l3v2-sedml.xml
test_suite/test_00003/: 00003-sbml-l3v2-sedml.omex  00003-sbml-l3v2-sedml.xml
test_suite/test_01186/: 01186-sbml-l3v2-sedml.omex  01186-sbml-l3v2-sedml.xml  cobrapy_test.py
utils/: __init__.py
(+1635 files in other folders)
